[gd_scene load_steps=35 format=2]

[ext_resource path="res://src/Character/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/herochar_spritesheet(new).png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 3, 6 )

[sub_resource type="Animation" id=29]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 34, 36, 38 ]
}

[sub_resource type="Animation" id=30]
resource_name = "dash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66 ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58 ]
}

[sub_resource type="Animation" id=3]
resource_name = "land"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 80, 81 ]
}

[sub_resource type="Animation" id=24]
resource_name = "land quick"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 80 ]
}

[sub_resource type="Animation" id=31]
resource_name = "push"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=32]
resource_name = "push end"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=28]
resource_name = "roll"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "land quick"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "land"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachine" id=14]
states/die/node = SubResource( 8 )
states/die/position = Vector2( 450, 172 )
states/fall/node = SubResource( 17 )
states/fall/position = Vector2( 158.918, 6.32399 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 331, 111 )
states/jump/node = SubResource( 16 )
states/jump/position = Vector2( 120.918, 143 )
states/land/node = SubResource( 18 )
states/land/position = Vector2( 336.918, -20 )
"states/land quick/node" = SubResource( 25 )
"states/land quick/position" = Vector2( 336.918, -85.846 )
states/run/node = SubResource( 10 )
states/run/position = Vector2( 587, 54 )
transitions = [ "idle", "run", SubResource( 11 ), "run", "idle", SubResource( 12 ), "idle", "die", SubResource( 13 ), "idle", "jump", SubResource( 19 ), "idle", "fall", SubResource( 20 ), "fall", "land", SubResource( 22 ), "land", "idle", SubResource( 23 ), "fall", "land quick", SubResource( 26 ), "land quick", "run", SubResource( 27 ), "jump", "fall", SubResource( 33 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -81.0816, -112.46 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
vframes = 15
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 29 )
anims/dash = SubResource( 30 )
anims/die = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 6 )
anims/land = SubResource( 3 )
"anims/land quick" = SubResource( 24 )
anims/push = SubResource( 31 )
"anims/push end" = SubResource( 32 )
anims/roll = SubResource( 28 )
anims/run = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 15 )

[node name="LeapTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FloorTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PressedJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
